network-manager-applet (1.0.6-1) UNRELEASED; urgency=medium

  * New upstream release.

 -- Michael Biebl <biebl@debian.org>  Fri, 28 Aug 2015 02:37:35 +0200

network-manager-applet (1.0.4-1) unstable; urgency=medium

  * New upstream release.
  * Make no-patch-numbers the default for gbp pq to avoid unnecessary noise.
  * Refresh patches.
  * Update symbols file for libnm-gtk0.

 -- Michael Biebl <biebl@debian.org>  Wed, 29 Jul 2015 01:08:38 +0200

network-manager-applet (1.0.2-1) unstable; urgency=medium

  * New upstream release.
  * Rebase patches.

 -- Michael Biebl <biebl@debian.org>  Tue, 05 May 2015 23:16:53 +0200

network-manager-applet (1.0.0-3) unstable; urgency=medium

  * Upload to unstable.

 -- Michael Biebl <biebl@debian.org>  Mon, 27 Apr 2015 16:43:02 +0200

network-manager-applet (1.0.0-2) experimental; urgency=medium

  * Install typelib files into multiarch paths now that gobject-introspection
    supports that.
  * Mark dev and gir packages as Multi-Arch: same.

 -- Michael Biebl <biebl@debian.org>  Mon, 09 Feb 2015 00:49:43 +0100

network-manager-applet (1.0.0-1) experimental; urgency=medium

  * New upstream release.
  * Rebase patches.
  * Bump dependency on network-manager and related dev packages to (>= 1.0.0).
  * Bump Standards-Version to 3.9.6. No further changes.
  * Update Vcs-Browser URL to use cgit and https.
  * Update Homepage URL to use https.

 -- Michael Biebl <biebl@debian.org>  Mon, 02 Feb 2015 13:40:08 +0100

network-manager-applet (0.9.10.0-2) unstable; urgency=medium

  * Disable bluetooth support. The gnome-bluetooth plugin no longer builds
    with gnome-bluetooth 3.12. But this plugin is really only useful for DUN
    which with bluez 5 isn't supported (yet).
    PAN support should still be functional.

 -- Michael Biebl <biebl@debian.org>  Wed, 16 Jul 2014 01:31:23 +0200

network-manager-applet (0.9.10.0-1) unstable; urgency=medium

  * New upstream release.
  * Update Build-Depends as per configure.ac.