@@ -8,10 +8,10 @@ Subject: Don't hard-code gnome-bluetooth plugin directory
  2 files changed, 3 insertions(+), 1 deletion(-)
 
 diff --git a/configure.ac b/configure.ac
-index 04ea361..6842c23 100644
+index 266bff6..9482a69 100644
 --- a/configure.ac
 +++ b/configure.ac
-@@ -142,6 +142,8 @@ case "${with_bluetooth}" in
+@@ -146,6 +146,8 @@ case "${with_bluetooth}" in
  				  gnome-bluetooth-1.0 < 3.11.0
  				  libnm-util libnm-glib,
  				  have_gbt=yes, have_gbt=no)
